# VideoCapture-with-device-name

./: .gitignore  CMakeLists.txt  MFCaptureToFile.sln  MFCaptureToFile.vcxproj  README.md  capture.cpp  capture.h  main.cpp  winmain.cpp
include/: devicelist.h
src/: devicelist.cpp  main.cpp
